hphp/hack/test/typecheck/as_expression/tuple5.php.exp
File "tuple5.php", line 8, characters 9-19:
Invalid "as" expression hint (Typing[4195])
  File "tuple5.php", line 8, characters 9-19:
  The "as" operator cannot be used with a tuple of size 2
